deployment/k8s/dev/ios-roc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ios-roc
  namespace: mozart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ios-roc
      version: v1
  template:
    metadata:
      labels:
        app: ios-roc
        version: v1
    spec:
      containers:
      - name: ios-roc
        image: ghcr.io/bvandewe/ios-roc/ios-roc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ios-roc
  namespace: mozart
spec:
  gateways:
  - istio-system/all-gateway
  hosts:
  - ios-roc.mysite.com
  http:
  - route:
    - destination:
        host: ios-roc
        port:
          number: 80


---


apiVersion: v1
kind: Service
metadata:
  name: ios-roc
  namespace: mozart
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
  selector:
    app: ios-roc
